tests/data/placebo/test_lambda_remove_matched_security_groups/lambda.ListFunctions_2.json
{
  "status_code": 200,
  "data": {
    "ResponseMetadata": {},
    "Functions": [
      {
        "FunctionName": "resource-fixer",
        "FunctionArn": "arn:aws:lambda:us-east-1:123412341234:function:resource-fixer",
        "Runtime": "python3.7",
        "Role": "arn:aws:iam::123412341234:role/resource-fixer-role",
        "Handler": "lambda_function.lambda_handler",
        "CodeSize": 2717,
        "Description": "",
        "Timeout": 603,
        "MemorySize": 128,
        "LastModified": "2019-07-12T17:42:22.098+0000",
        "CodeSha256": "3hDkJfWqXvGPUnNMu/35S0SMIPSbz50bleO/Elz3Qcc=",
        "Version": "$LATEST",
        "VpcConfig": {
          "SubnetIds": [
            "subnet-4f7a0012",
            "subnet-c490a4a0",
            "subnet-978689dc"
          ],
          "SecurityGroupIds": [
            "sg-01a19f602ecaf25f4",
            "sg-0b650189861ce4f6c"
          ],
          "VpcId": "vpc-3d05f145"
        },
        "TracingConfig": {
          "Mode": "PassThrough"
        },
        "RevisionId": "05175220-188c-427d-9e82-59f65cc6c6ee"
      },
      {
        "FunctionName": "test-func-2",
        "FunctionArn": "arn:aws:lambda:us-east-1:123412341234:function:test-func-2",
        "Runtime": "python3.7",
        "Role": "arn:aws:iam::123412341234:role/testrole",
        "Handler": "custodian_policy.run",
        "CodeSize": 542850,
        "Description": "cloud-custodian lambda policy",
        "Timeout": 60,
        "MemorySize": 512,
        "LastModified": "2019-07-12T16:08:01.519+0000",
        "CodeSha256": "4oAC20hFsF52y4MT9uY2BW/yKce2ekd6Zj9RkmxWMbU=",
        "Version": "$LATEST",
        "VpcConfig": {
          "SubnetIds": [],
          "SecurityGroupIds": [],
          "VpcId": ""
        },
        "TracingConfig": {
          "Mode": "PassThrough"
        },
        "RevisionId": "20806fdf-a3da-49cc-92d3-01594db25aa8"
      }
    ]
  }
}
