tests/data/placebo/test_lambda_remove_matched_security_groups/lambda.UpdateFunctionConfiguration_1.json
{
  "status_code": 200,
  "data": {
    "ResponseMetadata": {},
    "FunctionName": "resource-fixer",
    "FunctionArn": "arn:aws:lambda:us-east-1:123412341234:function:resource-fixer",
    "Runtime": "python3.7",
    "Role": "arn:aws:iam::123412341234:role/CapOne-SPR-resource-fixer-role",
    "Handler": "lambda_function.lambda_handler",
    "CodeSize": 2717,
    "Description": "",
    "Timeout": 603,
    "MemorySize": 128,
    "LastModified": "2019-07-12T17:53:45.774+0000",
    "CodeSha256": "3hDkJfWqXvGPUnNMu/35S0SMIPSbz50bleO/Elz3Qcc=",
    "Version": "$LATEST",
    "VpcConfig": {
      "SubnetIds": [
        "subnet-4f7a0012",
        "subnet-c490a4a0",
        "subnet-978689dc"
      ],
      "SecurityGroupIds": [
        "sg-01a19f602ecaf25f4",
        "sg-0b650189861ce4f6c"
      ],
      "VpcId": "vpc-3d05f145"
    },
    "TracingConfig": {
      "Mode": "PassThrough"
    },
    "RevisionId": "2718c692-8018-4e30-a3fc-71535b09803c"
  }
}
