tests/data/placebo/test_lambda_remove_matched_security_groups/tagging.GetResources_1.json
{
  "status_code": 200,
  "data": {
    "PaginationToken": "",
    "ResourceTagMappingList": [
      {
        "ResourceARN": "arn:aws:lambda:us-east-1:123412341234:function:test-func-2",
        "Tags": []
      },
      {
        "ResourceARN": "arn:aws:lambda:us-east-1:123412341234:function:resource-fixer",
        "Tags": [
          {
            "Key": "tag1",
            "Value": "val1"
          },
          {
            "Key": "tag2",
            "Value": "val2"
          }
        ]
      }
    ],
    "ResponseMetadata": {}
  }
}
